--- a/2_Preprocessing.ipynb
+++ b/2_Preprocessing.ipynb
@@ -559,18 +559,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = px.scatter(df[df[\"quality\"] > 0.01], x=\"RT\", y=\"mz\", color=\"quality\")\n",
+    "fig = px.scatter(df[df[\"quality\"] > 0.01], x=\"RT(s)\", y=\"m/z\", color=\"quality\")\n",
     "fig.update_layout(title=\"Consensus features\")\n",
     "fig.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d1fbf0bf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
