--- a/4_GNPSExport.ipynb
+++ b/4_GNPSExport.ipynb
@@ -114,7 +114,16 @@
     "        new_map.push_back(f)\n",
     "        \n",
     "Consensus_file= os.path.join(path ,'filtered' + \".consensusXML\")\n",
-    "ConsensusXMLFile().store(Consensus_file, new_map)"
+    "ConsensusXMLFile().store(Consensus_file, new_map)\n",
+    "\n",
+    "input_mzml_files = glob.glob(os.path.join(\"results\", \"interim\", \"Preprocessing\", \"MapAligned_*.mzML\"))\n",
+    "mzML_files = []\n",
+    "for mzML in input_mzml_files:\n",
+    "    exp = MSExperiment()\n",
+    "    MzMLFile().load(mzML, exp)\n",
+    "    for spec in exp:\n",
+    "        if spec.getMSLevel() == 2:\n",
+    "            mzML_files.append(mzML)"
    ]
   },
   {
@@ -134,19 +143,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "consensus= os.path.join(path, \"filtered.consensusXML\")\n",
-    "input_mzml_files=sorted(glob.glob(os.path.join(\"results\", \"interim\", \"Preprocessing\", \"MapAligned_*.mzML\")))\n",
-    "out_file= os.path.join(\"results\", \"GNPSexport\", \"MSMS.mgf\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "out_file= os.path.join(\"results\", \"GNPSexport\", \"MSMS.mgf\")\n",
     "spectra_clustering= GNPSMGFFile()\n",
-    "spectra_clustering.store(consensus, [s.encode() for s in input_mzml_files], out_file)"
+    "spectra_clustering.store(Consensus_file, [s.encode() for s in mzML_files], String(out_file))"
    ]
   },
   {
@@ -164,11 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmap = ConsensusMap()\n",
-    "ConsensusXMLFile().load(consensus, cmap)\n",
-    "out_quant= os.path.join(\"results\", \"GNPSexport\", \"FeatureQuantificationTable.txt\")\n",
-    "GNPS_matrix= GNPSQuantificationFile()\n",
-    "GNPS_matrix.store(cmap, String(out_quant))"
+    "GNPSQuantificationFile().store(new_map, os.path.join(\"results\", \"GNPSexport\", \"FeatureQuantificationTable.txt\"))"
    ]
   },
   {
@@ -186,24 +181,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = cmap.get_df()\n",
-    "df.insert(0, \"best ion\", [f.getMetaValue(\"best ion\") for f in cmap])\n",
-    "df[\"LinkedGroups\"] = [set(s.decode() for s in f.getMetaValue(\"LinkedGroups\")) for f in cmap]\n",
-    "df.insert(0, \"FEATURE_ID\", [\"e_\" + str(cf.getUniqueId()) for cf in cmap])\n",
-    "df[\"partners\"] = \"\"\n",
-    "for i in df.index:\n",
-    "    for j in df.iloc[i:].index:\n",
-    "        if i == j:\n",
-    "            continue\n",
-    "        if df.loc[i, \"LinkedGroups\"].intersection(df.loc[j, \"LinkedGroups\"]):\n",
-    "            if df.loc[i, \"partners\"]:\n",
-    "                df.loc[i, \"partners\"] += \";\"\n",
-    "            if df.loc[j, \"partners\"]:\n",
-    "                df.loc[j, \"partners\"] += \";\"\n",
-    "            df.loc[i, \"partners\"] += df.loc[j, \"FEATURE_ID\"]\n",
-    "            df.loc[j, \"partners\"] += df.loc[i, \"FEATURE_ID\"]\n",
-    "df = df.drop([\"sequence\", \"LinkedGroups\"], axis=1)\n",
-    "df.to_csv(os.path.join(\"results\",\"GNPSexport\", \"SuppPairs.tsv\"), sep=\"\\t\", index=False)"
+    "IonIdentityMolecularNetworking().annotateConsensusMap(new_map)\n",
+    "IonIdentityMolecularNetworking().writeSupplementaryPairTable(new_map, os.path.join(\"results\", \"GNPSexport\", \"SupplementaryPairTable.csv\"))"
    ]
   }
  ],
