--- a/3_Requantification(optional).ipynb
+++ b/3_Requantification(optional).ipynb
@@ -415,13 +415,12 @@
     "for filename in input_mzml_files:\n",
     "    exp = MSExperiment()\n",
     "    MzMLFile().load(filename, exp)\n",
-    "\n",
     "    for fmap in feature_maps:\n",
     "        peptide_ids = []\n",
     "        protein_ids = []\n",
-    "        if os.path.basename(fmap.getMetaValue(\"spectra_data\")[0].decode())[28:] == os.path.basename(filename)[11:]:\n",
+    "        if os.path.basename(fmap.getMetaValue(\"spectra_data\")[0].decode())[7:] == os.path.basename(filename)[11:]:\n",
     "            mapper.annotate(fmap, peptide_ids, protein_ids, use_centroid_rt, use_centroid_mz, exp)\n",
-    "            featureidx_file = os.path.join(path, \"IDMapper_\" + os.path.basename(fmap.getMetaValue(\"spectra_data\")[0].decode())[7:-4] +\"featureXML\")\n",
+    "            featureidx_file = os.path.join(path, \"IDMapper_\" + os.path.basename(filename)[11:-4] +\"featureXML\")\n",
     "            FeatureXMLFile().store(featureidx_file, fmap)"
    ]
   },
@@ -500,7 +499,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.9 64-bit",
+   "display_name": "pyopenms",
    "language": "python",
    "name": "python3"
   },
@@ -514,12 +513,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "edde62aa2661007f0756e9790e7a328c288a583bf6ce768a355147dac67c8db8"
    }
   }
  },
