--- a/6_Annotations.ipynb
+++ b/6_Annotations.ipynb
@@ -230,10 +230,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Perform spectral matching with a library in MGF format that is located under \"resources\":"
+    "Perform spectral matching with a library in MGF format that is located under \"resources\":\n",
+    "(here we are using the one freely available from GNPS (all libraries))"
    ]
   },
   {
@@ -351,7 +353,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('base')",
+   "display_name": "pyopenms",
    "language": "python",
    "name": "python3"
   },
@@ -365,12 +367,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "1d92193107b2c1fde5349325fa7e4180df63966062ebb6172612daf2925f9acf"
+    "hash": "edde62aa2661007f0756e9790e7a328c288a583bf6ce768a355147dac67c8db8"
    }
   }
  },
