--- a/3_Requantification(optional).ipynb
+++ b/3_Requantification(optional).ipynb
@@ -409,7 +409,10 @@
     "peptide_ids= []\n",
     "\n",
     "mapper = IDMapper()\n",
-    "\n",
+    "# Uncomment following code for negative mode:\n",
+    "# mapper_par = mapper.getDefaults()\n",
+    "# mapper_par.setValue(\"ignore_charge\", \"true\")\n",
+    "# mapper.setParameters(mapper_par)\n",
     "input_mzml_files= sorted(glob.glob(os.path.join(interim, 'Preprocessing', \"MapAligned_*.mzML\")))\n",
     "\n",
     "for filename in input_mzml_files:\n",
@@ -513,7 +516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.4 (main, Mar 31 2022, 03:38:35) [Clang 12.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
