--- a/2_Preprocessing.ipynb
+++ b/2_Preprocessing.ipynb
@@ -166,7 +166,7 @@
     "    mtd = MassTraceDetection()\n",
     "    mtd_par = mtd.getDefaults()\n",
     "    mtd_par.setValue(\"mass_error_ppm\", 10.0) \n",
-    "    mtd_par.setValue(\"noise_threshold_int\", 1.0e04)\n",
+    "    mtd_par.setValue(\"noise_threshold_int\", 1.0e03)\n",
     "    mtd.setParameters(mtd_par)\n",
     "    mtd.run(exp, mass_traces, 0)\n",
     "\n",
@@ -206,6 +206,89 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f81ad304",
+   "metadata": {},
+   "source": [
+    "Optionally remove all blank/control/QC features:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e54f83ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_feature_files = glob.glob(os.path.join(interim, \"Preprocessing\", \"FFM_*.featureXML\"))\n",
+    "feature_maps = []\n",
+    "for featurexml_file in input_feature_files:\n",
+    "    fmap = FeatureMap()\n",
+    "    FeatureXMLFile().load(featurexml_file, fmap)\n",
+    "    feature_maps.append(fmap)\n",
+    "# first we need to link the files (group)\n",
+    "# 2nd export the dataframe with the individual feature IDs\n",
+    "feature_grouper = FeatureGroupingAlgorithmKD()\n",
+    "\n",
+    "consensus_map = ConsensusMap()\n",
+    "file_descriptions = consensus_map.getColumnHeaders()\n",
+    "\n",
+    "for i, feature_map in enumerate(feature_maps):\n",
+    "    file_description = file_descriptions.get(i, ColumnHeader())\n",
+    "    file_description.filename = os.path.basename(feature_map.getMetaValue(\"spectra_data\")[0].decode())[7:]\n",
+    "    file_description.size = feature_map.size()\n",
+    "    file_descriptions[i] = file_description\n",
+    "\n",
+    "feature_grouper.group(feature_maps, consensus_map)\n",
+    "consensus_map.setUniqueIds()\n",
+    "consensus_map.setColumnHeaders(file_descriptions)\n",
+    "\n",
+    "# get intensities as a DataFrame\n",
+    "df = consensus_map.get_df()\n",
+    "for cf in consensus_map:\n",
+    "    if cf.metaValueExists(\"best ion\"):\n",
+    "        df[\"adduct\"] = [cf.getMetaValue(\"best ion\") for cf in consensus_map]\n",
+    "        break\n",
+    "df[\"feature_ids\"] = [[handle.getUniqueId() for handle in cf.getFeatureList()] for cf in consensus_map]\n",
+    "df= df.reset_index()\n",
+    "df= df.drop(columns= [\"sequence\"])\n",
+    "df= df.rename(columns={\"RT\": \"RT(s)\", \"mz\" :\"m/z\"})\n",
+    "\n",
+    "# blank filtering (define the blanks== user input)\n",
+    "df= df.drop(columns=[\"id\", \"charge\", \"quality\", \"m/z\", \"RT(s)\"])\n",
+    "blank_files= [\"Filter_Control1.mzML\", \"Filter_Control2.mzML\"]\n",
+    "samples= df[[col for col in df.columns if col not in blank_files]]\n",
+    "blanks= df[[col for col in df.columns if col in blank_files]]\n",
+    "#split samples and blanks\n",
+    "def remove_blank_features(blanks, samples, cutoff):\n",
+    "    # Getting mean for every feature in blank and Samples\n",
+    "    avg_blank = blanks.mean(axis=1, skipna=False) # set skipna = False do not exclude NA/null values when computing the result.\n",
+    "    #avg_samples= samples.set_index(\"feature_ids\")\n",
+    "    avg_samples = samples.mean(axis=1, skipna=False)\n",
+    "    # Getting the ratio of blank vs samples\n",
+    "    ratio_blank_samples = (avg_blank+1)/(avg_samples+1)\n",
+    "\n",
+    "    # Create an array with boolean values: True (is a real feature, ratio<cutoff) / False (is a blank, background, noise feature, ratio>cutoff)\n",
+    "    is_real_feature = (ratio_blank_samples<cutoff)\n",
+    "    is_real_blank= (ratio_blank_samples>cutoff)\n",
+    "    # Calculating the number of background features and features present (sum(bg_bin) equals number of features to be removed)\n",
+    "    real_features = samples[is_real_feature.values]\n",
+    "    keep_ids=[item for sublist in real_features[\"feature_ids\"] for item in sublist]\n",
+    "    return keep_ids\n",
+    "\n",
+    "keep_ids= remove_blank_features(blanks, samples, 0.3)\n",
+    "for fmap in feature_maps: \n",
+    "    if os.path.basename(fmap.getMetaValue(\"spectra_data\")[0].decode())[7:] not in blank_files:\n",
+    "        fmap_clean= FeatureMap(fmap)\n",
+    "        fmap_clean.clear(False)\n",
+    "        for f in fmap:\n",
+    "            if f.getUniqueId() in keep_ids:\n",
+    "                fmap_clean.push_back(f)\n",
+    "        FeatureXMLFile().store(os.path.join(path, \"Filtered_\"+ os.path.basename(fmap.getMetaValue(\"spectra_data\")[0].decode())[:-4] + \"featureXML\"), fmap_clean)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a4ffec84",
    "metadata": {},
@@ -229,7 +312,7 @@
     "path = os.path.join(interim, \"mzML\")\n",
     "\n",
     "input_mzml_files = glob.glob(os.path.join(interim, \"mzML\", \"PCpeak_*.mzML\"))\n",
-    "input_feature_files = glob.glob(os.path.join(interim, \"Preprocessing\", \"FFM_*.featureXML\"))\n",
+    "input_feature_files = glob.glob(os.path.join(interim, \"Preprocessing\", \"Filtered_*.featureXML\")) # or \"FFM_*.featureXML\" if you haven't filtered the blanks/control/QC\n",
     "\n",
     "for mzml in input_mzml_files:\n",
     "    exp = MSExperiment()\n",
@@ -265,7 +348,7 @@
    "source": [
     "path = os.path.join(interim, \"Preprocessing\")\n",
     "\n",
-    "input_feature_files = glob.glob(os.path.join(interim, \"Preprocessing\", \"FFM_*.featureXML\"))\n",
+    "input_feature_files = glob.glob(os.path.join(interim, \"Preprocessing\", \"Filtered_*.featureXML\"))\n",
     "feature_maps=[]\n",
     "for filename in input_feature_files:\n",
     "    feature_map_MFD = FeatureMap()\n",
