--- a/2_Preprocessing.ipynb
+++ b/2_Preprocessing.ipynb
@@ -252,11 +252,9 @@
     "        break\n",
     "df[\"feature_ids\"] = [[handle.getUniqueId() for handle in cf.getFeatureList()] for cf in consensus_map]\n",
     "df= df.reset_index()\n",
-    "df= df.drop(columns= [\"sequence\"])\n",
-    "df= df.rename(columns={\"RT\": \"RT(s)\", \"mz\" :\"m/z\"})\n",
+    "df= df.drop(columns=[\"sequence\", \"id\", \"charge\", \"quality\", \"mz\", \"RT\"])\n",
     "\n",
     "# blank filtering (define the blanks== user input)\n",
-    "df= df.drop(columns=[\"id\", \"charge\", \"quality\", \"m/z\", \"RT(s)\"])\n",
     "blank_files= [\"Filter_Control1.mzML\", \"Filter_Control2.mzML\"]\n",
     "samples= df[[col for col in df.columns if col not in blank_files]]\n",
     "blanks= df[[col for col in df.columns if col in blank_files]]\n",
@@ -278,6 +276,7 @@
     "    return keep_ids\n",
     "\n",
     "keep_ids= remove_blank_features(blanks, samples, 0.3)\n",
+    "\n",
     "for fmap in feature_maps: \n",
     "    if os.path.basename(fmap.getMetaValue(\"spectra_data\")[0].decode())[7:] not in blank_files:\n",
     "        fmap_clean= FeatureMap(fmap)\n",
