--- a/2_Preprocessing.ipynb
+++ b/2_Preprocessing.ipynb
@@ -166,7 +166,7 @@
     "    mtd = MassTraceDetection()\n",
     "    mtd_par = mtd.getDefaults()\n",
     "    mtd_par.setValue(\"mass_error_ppm\", 10.0) \n",
-    "    mtd_par.setValue(\"noise_threshold_int\", 1.0e03)\n",
+    "    mtd_par.setValue(\"noise_threshold_int\", 1.0e04)\n",
     "    mtd.setParameters(mtd_par)\n",
     "    mtd.run(exp, mass_traces, 0)\n",
     "\n",
@@ -284,7 +284,7 @@
     "        for f in fmap:\n",
     "            if f.getUniqueId() in keep_ids:\n",
     "                fmap_clean.push_back(f)\n",
-    "        FeatureXMLFile().store(os.path.join(path, \"Filtered_\"+ os.path.basename(fmap.getMetaValue(\"spectra_data\")[0].decode())[:-4] + \"featureXML\"), fmap_clean)"
+    "        FeatureXMLFile().store(os.path.join(path, \"Filtered_\"+ os.path.basename(fmap.getMetaValue(\"spectra_data\")[0].decode())[7:-4] + \"featureXML\"), fmap_clean)"
    ]
   },
   {
@@ -321,7 +321,8 @@
     "    for filename in input_feature_files:\n",
     "        feature_map_MFD = FeatureMap()\n",
     "        FeatureXMLFile().load(filename, feature_map_MFD)\n",
-    "        if os.path.basename(mzml)[7:-5] == os.path.basename(filename)[4:-11]:\n",
+    "        if os.path.basename(mzml)[7:-5] == os.path.basename(filename)[9:-11]:\n",
+    "            print(filename)\n",
     "            correct.correctToNearestFeature(feature_map_MFD, exp, 0.0, 100.0, True, False, False, False, 3, 0)\n",
     "            corrected_file = os.path.join(path, \"PCfeature_\" + os.path.basename(mzml)[7:])\n",
     "            MzMLFile().store(corrected_file, exp)"
@@ -346,8 +347,9 @@
    "outputs": [],
    "source": [
     "path = os.path.join(interim, \"Preprocessing\")\n",
+    "interim= os.path.join(\"results\", \"interim\")\n",
     "\n",
-    "input_feature_files = glob.glob(os.path.join(interim, \"Preprocessing\", \"Filtered_*.featureXML\"))\n",
+    "input_feature_files = glob.glob(os.path.join(path, \"Filtered_*.featureXML\"))\n",
     "feature_maps=[]\n",
     "for filename in input_feature_files:\n",
     "    feature_map_MFD = FeatureMap()\n",
@@ -457,7 +459,7 @@
     "        TransformationXMLFile().load(trafo_XML, trafo, True)\n",
     "        if os.path.basename(trafo_XML)[11:-9] == os.path.basename(filename)[10:-5]:\n",
     "            transformer.transformRetentionTimes(exp, trafo, True)\n",
-    "            mzml_file = os.path.join(path, \"MapAligned_\" + os.path.basename(exp.getLoadedFilePath())[10:-5] +\".mzML\")\n",
+    "            mzml_file = os.path.join(interim, \"mzML\", \"MapAligned_\" + os.path.basename(exp.getLoadedFilePath())[10:-5] +\".mzML\")\n",
     "            MzMLFile().store(mzml_file, exp)"
    ]
   },
@@ -568,12 +570,11 @@
     "peptide_ids= []\n",
     "\n",
     "mapper = IDMapper()\n",
-    "input_mzml_files= sorted(glob.glob(os.path.join(path, \"MapAligned_*.mzML\")))\n",
+    "input_mzml_files= sorted(glob.glob(os.path.join(\"results\", \"interim\", \"mzML\", \"MapAligned_*.mzML\")))\n",
     "\n",
     "for filename in input_mzml_files:\n",
     "    exp = MSExperiment()\n",
     "    MzMLFile().load(filename, exp)\n",
-    "\n",
     "    for fmap in feature_maps:\n",
     "        peptide_ids = []\n",
     "        protein_ids = []\n",
