--- a/1_FileConversion.ipynb
+++ b/1_FileConversion.ipynb
@@ -17,13 +17,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!mono resources/ThermoRawFileParser/ThermoRawFileParser.exe -d=\"data/raw/\" -o=\"data/mzML/\""
+    "import glob\n",
+    "import os\n",
+    "input_raw_files = os.path.join(\"data\", \"raw\")\n",
+    "output_mzML_files = os.path.join(\"data\", \"mzML\")\n",
+    "exec= os.path.join(\"resources\", \"ThermoRawFileParser\", \"ThermoRawFileParser.exe\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mono {exec} -d={input_raw_files} -o={output_mzML_files}"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "pyopenms",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
   },
   "orig_nbformat": 4
  },
