--- a/5_SIRIUS_CSI.ipynb
+++ b/5_SIRIUS_CSI.ipynb
@@ -76,7 +76,7 @@
     "    os.mkdir(path) # create a path directory\n",
     "\n",
     "feature_files = sorted(glob.glob(os.path.join(\"results\", \"interim\", \"Preprocessing\", \"MFD_*.featureXML\")))\n",
-    "input_mzml_files = sorted(glob.glob(os.path.join(\"results\", \"interim\", \"Preprocessing\", \"MapAligned_*.mzML\")))\n",
+    "input_mzml_files = sorted(glob.glob(os.path.join(\"results\", \"interim\", \"mzML\", \"MapAligned_*.mzML\")))\n",
     "\n",
     "def find_exec(dir, program):\n",
     "        for path in Path(dir).rglob(program):\n",
