--- a/9_Data_exploration(data_dependent).ipynb
+++ b/9_Data_exploration(data_dependent).ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path= os.path.join(\"pyOpenMS_old_results\", \"data_analysis\", \"tables_big_data\")\n",
+    "path= os.path.join(\"results\", \"annotations\")\n",
     "isExist= os.path.exists(path)\n",
     "if not isExist:\n",
     "    os.mkdir(path)"
@@ -55,8 +55,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Matrix= pd.read_csv(os.path.join(path, \"Matrix_Clean.csv\"), sep=\"\\t\")\n",
-    "Matrix= Matrix.set_index([\"mz\", \"RT\"])\n",
+    "Matrix= pd.read_csv(os.path.join(path, \"SiriusCSI_MSMS_annotated_FeatureMatrix.tsv\"), sep=\"\\t\")\n",
+    "Matrix= Matrix.set_index([\"m/z\", \"RT(s)\"])\n",
     "Matrix= Matrix.fillna(0)\n",
     "Matrix= Matrix.where(Matrix==0, 1)\n",
     "Matrix= Matrix.sort_index(axis=1)\n",
@@ -73,7 +73,7 @@
     "Grouped= Grouped.transpose()\n",
     "Grouped= Grouped.reset_index()\n",
     "Grouped.to_csv(os.path.join(path, \"Matrix_Grouped.csv\"), sep=\"\\t\", index=None)\n",
-    "Grouped= Grouped.set_index([\"mz\", \"RT\"])\n",
+    "Grouped= Grouped.set_index([\"m/z\", \"RT(s)\"])\n",
     "Grouped"
    ]
   },
