--- a/2_Preprocessing.ipynb
+++ b/2_Preprocessing.ipynb
@@ -749,7 +749,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "metabo",
+   "display_name": "pyopenms",
    "language": "python",
    "name": "python3"
   },
@@ -763,11 +763,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
-    "hash": "af38ad5e49aed933f8d6ee223f599c93f64b7c643a606a4150c2ce501c9413ca"
+    "hash": "edde62aa2661007f0756e9790e7a328c288a583bf6ce768a355147dac67c8db8"
    }
   }
  },
