--- a/4_GNPSExport.ipynb
+++ b/4_GNPSExport.ipynb
@@ -116,14 +116,15 @@
     "Consensus_file= os.path.join(path ,'filtered' + \".consensusXML\")\n",
     "ConsensusXMLFile().store(Consensus_file, new_map)\n",
     "\n",
-    "input_mzml_files = glob.glob(os.path.join(\"results\", \"interim\", \"Preprocessing\", \"MapAligned_*.mzML\"))\n",
+    "input_mzml_files = glob.glob(os.path.join(\"results\", \"interim\", \"mzML\", \"MapAligned_*.mzML\"))\n",
     "mzML_files = []\n",
     "for mzML in input_mzml_files:\n",
     "    exp = MSExperiment()\n",
     "    MzMLFile().load(mzML, exp)\n",
     "    for spec in exp:\n",
     "        if spec.getMSLevel() == 2:\n",
-    "            mzML_files.append(mzML)"
+    "            mzML_files.append(mzML)\n",
+    "            break"
    ]
   },
   {
@@ -145,7 +146,7 @@
    "source": [
     "out_file= os.path.join(\"results\", \"GNPSexport\", \"MSMS.mgf\")\n",
     "spectra_clustering= GNPSMGFFile()\n",
-    "spectra_clustering.store(Consensus_file, [s.encode() for s in mzML_files], String(out_file))"
+    "spectra_clustering.store(Consensus_file, [s.encode() for s in mzML_files], out_file)"
    ]
   },
   {
