simplify pyopenms installation

--- a/4_GNPSExport.ipynb
+++ b/4_GNPSExport.ipynb
@@ -146,7 +146,7 @@
    "source": [
     "out_file= os.path.join(\"results\", \"GNPSexport\", \"MSMS.mgf\")\n",
     "spectra_clustering= GNPSMGFFile()\n",
-    "spectra_clustering.store(Consensus_file, [s.encode() for s in mzML_files], out_file)"
+    "spectra_clustering.store(Consensus_file, [s.encode() for s in mzML_files], String(out_file))"
    ]
   },
   {
